Bilingual support complete: fix Web Design page structure; add EN/ES toggles across Ecommerce; persist language in main.js; update html[lang] on switch

--- a/services/desktop-apps-miami.html
+++ b/services/desktop-apps-miami.html
@@ -96,11 +96,15 @@
           <span class="brand-tagline">Digital Agency</span>
         </div>
       </div>
+      <div class="language-switcher">
+        <button class="lang-btn active" onclick="switchLanguage('en')">EN</button>
+        <button class="lang-btn" onclick="switchLanguage('es')">ES</button>
+      </div>
       <div class="nav-menu">
-        <a class="nav-link" href="../#services">Services</a>
-        <a class="nav-link" href="../#about">About</a>
-        <a class="nav-link" href="../#contact">Contact</a>
-        <a class="cta-nav" href="../#whatsapp-btn">Get Quote</a>
+        <a class="nav-link" href="../#services" data-en="Services" data-es="Servicios">Services</a>
+        <a class="nav-link" href="../#about" data-en="About" data-es="Nosotros">About</a>
+        <a class="nav-link" href="../#contact" data-en="Contact" data-es="Contacto">Contact</a>
+        <a class="cta-nav" href="../#whatsapp-btn" data-en="Get Quote" data-es="Cotizar">Get Quote</a>
       </div>
     </div>
   </nav>
@@ -108,24 +112,24 @@
   <main class="container">
     <nav class="breadcrumb" aria-label="Breadcrumb" style="margin-top:96px;">
       <ol>
-        <li><a href="../">Home</a></li>
-        <li><a href="../#services">Services</a></li>
-        <li aria-current="page">Desktop Applications Miami</li>
+        <li><a href="../" data-en="Home" data-es="Inicio">Home</a></li>
+        <li><a href="../#services" data-en="Services" data-es="Servicios">Services</a></li>
+        <li aria-current="page" data-en="Desktop Apps Miami" data-es="Apps de Escritorio Miami">Desktop Apps Miami</li>
       </ol>
     </nav>
     <section class="hero" style="padding-top: 96px;">
-      <h1>Desktop Applications Miami</h1>
-      <p>Windows, macOS y Linux. Electron, .NET y Java con instaladores, firma, auto‑updates e integraciones.</p>
+      <h1 data-en="Desktop Apps Miami" data-es="Apps de Escritorio Miami">Desktop Apps Miami</h1>
+      <p data-en="Windows, macOS and Linux. Electron, .NET and Java with installers, code signing, auto‑updates and integrations." data-es="Windows, macOS y Linux. Electron, .NET y Java con instaladores, firma, auto‑updates e integraciones.">Windows, macOS y Linux. Electron, .NET y Java con instaladores, firma, auto‑updates e integraciones.</p>
       <div class="hero-cta">
-        <a href="https://wa.me/17869926153?text=Hola%20quiero%20una%20cotizaci%C3%B3n%20para%20Desktop%20Apps" class="btn-primary" target="_blank">Chat on WhatsApp</a>
-        <a href="../#contact" class="btn-secondary">Request a Quote</a>
+        <a href="https://wa.me/17869926153?text=Hola%20quiero%20una%20cotizaci%C3%B3n%20para%20Desktop%20Apps" class="btn-primary" target="_blank" data-en="Chat on WhatsApp" data-es="Chatear en WhatsApp">Chat on WhatsApp</a>
+        <a href="../#contact" class="btn-secondary" data-en="Request a Quote" data-es="Solicitar Cotización">Request a Quote</a>
       </div>
     </section>
 
     <section class="services" id="overview">
       <div class="section-header">
-        <h2>What you get</h2>
-        <p>Aplicaciones robustas listas para producción.</p>
+        <h2 data-en="What you get" data-es="Qué obtienes">What you get</h2>
+        <p data-en="Robust applications ready for production." data-es="Aplicaciones robustas listas para producción.">Aplicaciones robustas listas para producción.</p>
       </div>
       <div class="services-grid">
         <div class="service-card"><div class="service-image"><i class="fas fa-desktop"></i></div><div class="service-content"><h3>Cross‑Platform & Native</h3><p>Electron para multiplataforma o .NET/WinUI para Windows y Java/JavaFX según la necesidad.</p></div></div>
@@ -136,8 +140,8 @@
 
     <section class="about-section" id="process">
       <div class="section-header">
-        <h2>Our process</h2>
-        <p>Fases claras con entregas revisables.</p>
+        <h2 data-en="Our process" data-es="Nuestro proceso">Our process</h2>
+        <p data-en="Clear phases with reviewable deliverables." data-es="Fases claras con entregas revisables.">Fases claras con entregas revisables.</p>
       </div>
       <ol class="about-features">
         <li>Descubrimiento & alcance</li>
@@ -150,18 +154,18 @@
 
     <section class="contact" id="faq">
       <div class="section-header">
-        <h2>FAQ</h2>
-        <p>Preguntas frecuentes de empresas en Miami/Hialeah.</p>
+        <h2 data-en="FAQ" data-es="Preguntas Frecuentes">FAQ</h2>
+        <p data-en="Frequently asked questions from Miami/Hialeah businesses." data-es="Preguntas frecuentes de empresas en Miami/Hialeah.">Preguntas frecuentes de empresas en Miami/Hialeah.</p>
       </div>
-      <details><summary>¿Trabajan offline/online?</summary><p>Ambos. Podemos cachear datos y sincronizar cuando haya red.</p></details>
-      <details><summary>¿Pueden firmar y notarizar apps?</summary><p>Sí, configuramos firma de código para Windows y notarización en macOS.</p></details>
-      <details><summary>¿Dan soporte post‑lanzamiento?</summary><p>Incluimos soporte inicial y planes mensuales opcionales.</p></details>
+      <details><summary data-en="Offline/online?" data-es="¿Trabajan offline/online?">¿Trabajan offline/online?</summary><p data-en="Both. We can cache data and sync when online." data-es="Ambos. Podemos cachear datos y sincronizar cuando haya red.">Ambos. Podemos cachear datos y sincronizar cuando haya red.</p></details>
+      <details><summary data-en="Code signing and notarization?" data-es="¿Pueden firmar y notarizar apps?">¿Pueden firmar y notarizar apps?</summary><p data-en="Yes, we configure Windows code signing and macOS notarization." data-es="Sí, configuramos firma de código para Windows y notarización en macOS.">Sí, configuramos firma de código para Windows y notarización en macOS.</p></details>
+      <details><summary data-en="Post‑launch support?" data-es="¿Dan soporte post‑lanzamiento?">¿Dan soporte post‑lanzamiento?</summary><p data-en="We include initial support and optional monthly plans." data-es="Incluimos soporte inicial y planes mensuales opcionales.">Incluimos soporte inicial y planes mensuales opcionales.</p></details>
     </section>
 
     <section class="clients">
       <div class="section-header">
-        <h2>Clients</h2>
-        <p>Selected brands we’ve supported.</p>
+        <h2 data-en="Clients" data-es="Clientes">Clients</h2>
+        <p data-en="Selected brands we’ve supported." data-es="Marcas seleccionadas que hemos apoyado.">Selected brands we’ve supported.</p>
       </div>
       <div class="features-grid">
         <div class="feature-item" aria-label="Client 1"><img src="../images/clients/client-1.svg" alt="Client 1 logo" loading="lazy" /></div>
@@ -175,8 +179,8 @@
 
     <section class="testimonials">
       <div class="section-header">
-        <h2>Testimonials</h2>
-        <p>Desktop apps feedback from Miami/Hialeah clients.</p>
+        <h2 data-en="Testimonials" data-es="Testimonios">Testimonials</h2>
+        <p data-en="Desktop apps feedback from Miami/Hialeah clients." data-es="Opiniones de clientes de Miami/Hialeah sobre apps de escritorio.">Desktop apps feedback from Miami/Hialeah clients.</p>
       </div>
       <div class="features-grid">
         <div class="feature-item"><div class="feature-icon"><i class="fas fa-star"></i></div><h3>“Auto‑updates confiables”</h3><p>“El sistema se actualiza solo sin afectar al equipo. Entregas puntuales y buen QA.” — <strong>Daniel P.</strong></p></div>
@@ -187,32 +191,32 @@
 
     <section class="services" id="related-services">
       <div class="section-header">
-        <h2>Related services</h2>
-        <p>Complement your desktop app with these services.</p>
+        <h2 data-en="Related services" data-es="Servicios relacionados">Related services</h2>
+        <p data-en="Complement your desktop app with these services." data-es="Complementa tu app de escritorio con estos servicios.">Complement your desktop app with these services.</p>
       </div>
       <div class="services-grid">
         <div class="service-card">
           <div class="service-image"><i class="fas fa-mobile-alt"></i></div>
           <div class="service-content">
-            <h3>Mobile Apps Miami</h3>
-            <p>Extend your desktop functionality to iOS and Android with native or cross‑platform apps.</p>
-            <a class="service-btn" href="mobile-apps-miami.html">Learn More</a>
+            <h3 data-en="Mobile Apps Miami" data-es="Apps Móviles Miami">Mobile Apps Miami</h3>
+            <p data-en="Extend your desktop functionality to iOS and Android with native or cross‑platform apps." data-es="Extiende tu funcionalidad de escritorio a iOS y Android con apps nativas o multiplataforma.">Extend your desktop functionality to iOS and Android with native or cross‑platform apps.</p>
+            <a class="service-btn" href="mobile-apps-miami.html" data-en="Learn More" data-es="Saber Más">Learn More</a>
           </div>
         </div>
         <div class="service-card">
           <div class="service-image"><i class="fas fa-palette"></i></div>
           <div class="service-content">
-            <h3>UX/UI Design</h3>
-            <p>Design systems and flows that keep desktop and mobile experiences consistent.</p>
-            <a class="service-btn" href="ux-ui-design-miami.html">Learn More</a>
+            <h3 data-en="UX/UI Design" data-es="Diseño UX/UI">UX/UI Design</h3>
+            <p data-en="Design systems and flows that keep desktop and mobile experiences consistent." data-es="Design systems y flujos que unifican experiencias de escritorio y móviles.">Design systems and flows that keep desktop and mobile experiences consistent.</p>
+            <a class="service-btn" href="ux-ui-design-miami.html" data-en="Learn More" data-es="Saber Más">Learn More</a>
           </div>
         </div>
         <div class="service-card">
           <div class="service-image"><i class="fas fa-code"></i></div>
           <div class="service-content">
-            <h3>Web Design Miami</h3>
-            <p>Web portals and dashboards that integrate with your desktop application.</p>
-            <a class="service-btn" href="web-design-miami.html">Learn More</a>
+            <h3 data-en="Web Design Miami" data-es="Diseño Web Miami">Web Design Miami</h3>
+            <p data-en="Web portals and dashboards that integrate with your desktop application." data-es="Portales y dashboards web que se integran con tu aplicación de escritorio.">Web portals and dashboards that integrate with your desktop application.</p>
+            <a class="service-btn" href="web-design-miami.html" data-en="Learn More" data-es="Saber Más">Learn More</a>
           </div>
         </div>
       </div>
@@ -220,11 +224,11 @@
 
     <section class="contact">
       <div class="section-header">
-        <h2>Ready to start?</h2>
-        <p>Get a tailored proposal in 24–48 hours.</p>
+        <h2 data-en="Ready to start?" data-es="¿Listo para empezar?">Ready to start?</h2>
+        <p data-en="Get a tailored proposal in 24–48 hours." data-es="Recibe una propuesta a medida en 24–48 horas.">Get a tailored proposal in 24–48 hours.</p>
       </div>
       <div class="whatsapp-cta">
-        <a href="https://wa.me/17869926153?text=Hello%20I%20want%20a%20quote%20for%20Desktop%20Apps%20Miami" class="whatsapp-btn" target="_blank"><i class="fab fa-whatsapp"></i><span>Chat on WhatsApp</span></a>
+        <a href="https://wa.me/17869926153?text=Hello%20I%20want%20a%20quote%20for%20Desktop%20Apps%20Miami" class="whatsapp-btn" target="_blank"><i class="fab fa-whatsapp"></i><span data-en="Chat on WhatsApp" data-es="Chatear en WhatsApp">Chat on WhatsApp</span></a>
       </div>
     </section>
   </main>
@@ -241,4 +245,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" defer></script>
   <script src="../scripts/main.js" defer></script>
 </body>
-<\/html>
+</html>
