--- a/services/ecommerce-miami.html
+++ b/services/ecommerce-miami.html
@@ -106,15 +106,19 @@
       <div class="nav-brand">
         <a href="../"><img src="../images/logo.png" alt="UX90 Creations Logo" class="brand-logo"></a>
         <div class="brand-text">
-          <h2 class="brand-name">UX90 Creations</h2>
-          <span class="brand-tagline">Digital Agency</span>
+          <h2 class="brand-name" data-en="UX90 Creations" data-es="UX90 Creaciones">UX90 Creations</h2>
+          <span class="brand-tagline" data-en="Digital Agency" data-es="Agencia Digital">Digital Agency</span>
         </div>
+      <div class="language-switcher">
+        <button class="lang-btn active" onclick="switchLanguage('en')">EN</button>
+        <button class="lang-btn" onclick="switchLanguage('es')">ES</button>
+      </div>
       </div>
       <div class="nav-menu">
-        <a class="nav-link" href="../#services">Services</a>
-        <a class="nav-link" href="../#about">About</a>
-        <a class="nav-link" href="../#contact">Contact</a>
-        <a class="cta-nav" href="../#whatsapp-btn">Get Quote</a>
+        <a class="nav-link" href="../#services" data-en="Services" data-es="Servicios">Services</a>
+        <a class="nav-link" href="../#about" data-en="About" data-es="Nosotros">About</a>
+        <a class="nav-link" href="../#contact" data-en="Contact" data-es="Contacto">Contact</a>
+        <a class="cta-nav" href="../#whatsapp-btn" data-en="Get Quote" data-es="Cotizar">Get Quote</a>
       </div>
     </div>
   </nav>
@@ -122,60 +126,60 @@
   <main class="container">
     <nav class="breadcrumb" aria-label="Breadcrumb" style="margin-top:96px;">
       <ol>
-        <li><a href="../">Home</a></li>
-        <li><a href="../#services">Services</a></li>
-        <li aria-current="page">E‑commerce Miami</li>
+          <li><a href="../" data-en="Home" data-es="Inicio">Home</a></li>
+          <li><a href="../#services" data-en="Services" data-es="Servicios">Services</a></li>
+          <li aria-current="page" data-en="E‑commerce Miami" data-es="E‑commerce Miami">E‑commerce Miami</li>
       </ol>
     </nav>
     <section class="hero" style="padding-top: 96px;">
-      <h1>E‑commerce Miami</h1>
-      <p>Shopify & WooCommerce stores built to convert. Fast, secure, and SEO‑ready for Miami and Hialeah businesses.</p>
+      <h1 data-en="E‑commerce Miami" data-es="E‑commerce Miami">E‑commerce Miami</h1>
+      <p data-en="Shopify & WooCommerce stores built to convert. Fast, secure, and SEO‑ready for Miami and Hialeah businesses." data-es="Tiendas en Shopify y WooCommerce que convierten. Rápidas, seguras y listas para SEO en Miami y Hialeah.">Shopify & WooCommerce stores built to convert. Fast, secure, and SEO‑ready for Miami and Hialeah businesses.</p>
       <div class="hero-cta">
-        <a href="https://wa.me/17869926153?text=Hola%20quiero%20una%20tienda%20online%20en%20Miami" class="btn-primary" target="_blank">Chat on WhatsApp</a>
-        <a href="../#contact" class="btn-secondary">Request a Quote</a>
+  <a href="https://wa.me/17869926153?text=Hola%20quiero%20una%20tienda%20online%20en%20Miami" class="btn-primary" target="_blank" data-en="Chat on WhatsApp" data-es="Chatear en WhatsApp">Chat on WhatsApp</a>
+  <a href="../#contact" class="btn-secondary" data-en="Request a Quote" data-es="Solicitar Cotización">Request a Quote</a>
       </div>
     </section>
 
     <section class="services" id="features">
       <div class="section-header">
-        <h2>What you get</h2>
-        <p>Everything for a high‑converting store.</p>
+        <h2 data-en="What you get" data-es="Qué obtienes">What you get</h2>
+        <p data-en="Everything for a high‑converting store." data-es="Todo para una tienda de alta conversión.">Everything for a high‑converting store.</p>
       </div>
       <div class="services-grid">
-        <div class="service-card"><div class="service-image"><i class="fas fa-bolt"></i></div><div class="service-content"><h3>Fast & Secure</h3><p>Optimized performance, HTTPS, and best‑practice security.</p></div></div>
-        <div class="service-card"><div class="service-image"><i class="fas fa-credit-card"></i></div><div class="service-content"><h3>Payments & Checkout</h3><p>Stripe, PayPal, Apple/Google Pay, taxes, shipping, and abandoned cart flows.</p></div></div>
-        <div class="service-card"><div class="service-image"><i class="fas fa-magnifying-glass-dollar"></i></div><div class="service-content"><h3>SEO & Analytics</h3><p>Structured data, collections SEO, GA4, and conversion tracking.</p></div></div>
+        <div class="service-card"><div class="service-image"><i class="fas fa-bolt"></i></div><div class="service-content"><h3 data-en="Fast & Secure" data-es="Rápido y Seguro">Fast & Secure</h3><p data-en="Optimized performance, HTTPS, and best‑practice security." data-es="Rendimiento optimizado, HTTPS y seguridad de buenas prácticas.">Optimized performance, HTTPS, and best‑practice security.</p></div></div>
+        <div class="service-card"><div class="service-image"><i class="fas fa-credit-card"></i></div><div class="service-content"><h3 data-en="Payments & Checkout" data-es="Pagos y Checkout">Payments & Checkout</h3><p data-en="Stripe, PayPal, Apple/Google Pay, taxes, shipping, and abandoned cart flows." data-es="Stripe, PayPal, Apple/Google Pay, impuestos, envíos y flujos de carrito abandonado.">Stripe, PayPal, Apple/Google Pay, taxes, shipping, and abandoned cart flows.</p></div></div>
+        <div class="service-card"><div class="service-image"><i class="fas fa-magnifying-glass-dollar"></i></div><div class="service-content"><h3 data-en="SEO & Analytics" data-es="SEO y Analítica">SEO & Analytics</h3><p data-en="Structured data, collections SEO, GA4, and conversion tracking." data-es="Datos estructurados, SEO de colecciones, GA4 y tracking de conversiones.">Structured data, collections SEO, GA4, and conversion tracking.</p></div></div>
       </div>
     </section>
 
     <section class="about-section" id="process">
       <div class="section-header">
-        <h2>Our process</h2>
-        <p>From product catalog to launch.</p>
+        <h2 data-en="Our process" data-es="Nuestro proceso">Our process</h2>
+        <p data-en="From product catalog to launch." data-es="Del catálogo al lanzamiento.">From product catalog to launch.</p>
       </div>
       <ol class="about-features">
-        <li>Discovery & platform choice</li>
-        <li>Theme/UX design and apps</li>
-        <li>Products & collections setup</li>
-        <li>Payments, shipping, and SEO</li>
-        <li>QA, launch, and training</li>
+        <li data-en="Discovery & platform choice" data-es="Descubrimiento y elección de plataforma">Discovery & platform choice</li>
+        <li data-en="Theme/UX design and apps" data-es="Diseño de tema/UX y apps">Theme/UX design and apps</li>
+        <li data-en="Products & collections setup" data-es="Configuración de productos y colecciones">Products & collections setup</li>
+        <li data-en="Payments, shipping, and SEO" data-es="Pagos, envíos y SEO">Payments, shipping, and SEO</li>
+        <li data-en="QA, launch, and training" data-es="QA, lanzamiento y capacitación">QA, launch, and training</li>
       </ol>
     </section>
 
     <section class="contact" id="faq">
       <div class="section-header">
-        <h2>FAQ</h2>
-        <p>E‑commerce questions we get most.</p>
+        <h2 data-en="FAQ" data-es="Preguntas Frecuentes">FAQ</h2>
+        <p data-en="E‑commerce questions we get most." data-es="Preguntas de e‑commerce más comunes.">E‑commerce questions we get most.</p>
       </div>
-      <details><summary>Do you migrate from another platform?</summary><p>Yes. We migrate products, customers, and orders when feasible.</p></details>
-      <details><summary>Do you support multi‑language?</summary><p>Yes. We implement bilingual setups (EN/ES) with proper SEO.</p></details>
-      <details><summary>Can you manage the store?</summary><p>We offer ongoing support, optimization, and growth services.</p></details>
+      <details><summary data-en="Do you migrate from another platform?" data-es="¿Migran desde otra plataforma?">Do you migrate from another platform?</summary><p data-en="Yes. We migrate products, customers, and orders when feasible." data-es="Sí. Migramos productos, clientes y pedidos cuando es viable.">Yes. We migrate products, customers, and orders when feasible.</p></details>
+      <details><summary data-en="Do you support multi‑language?" data-es="¿Soportan multi‑idioma?">Do you support multi‑language?</summary><p data-en="Yes. We implement bilingual setups (EN/ES) with proper SEO." data-es="Sí. Implementamos configuraciones bilingües (EN/ES) con SEO correcto.">Yes. We implement bilingual setups (EN/ES) with proper SEO.</p></details>
+      <details><summary data-en="Can you manage the store?" data-es="¿Pueden gestionar la tienda?">Can you manage the store?</summary><p data-en="We offer ongoing support, optimization, and growth services." data-es="Ofrecemos soporte continuo, optimización y servicios de crecimiento.">We offer ongoing support, optimization, and growth services.</p></details>
     </section>
 
     <section class="clients">
       <div class="section-header">
-        <h2>Clients</h2>
-        <p>Miami stores we’ve supported.</p>
+        <h2 data-en="Clients" data-es="Clientes">Clients</h2>
+        <p data-en="Miami stores we’ve supported." data-es="Tiendas de Miami que hemos apoyado.">Miami stores we’ve supported.</p>
       </div>
       <div class="features-grid">
         <div class="feature-item" aria-label="Client 1"><img src="../images/clients/client-1.svg" alt="Client 1 logo" loading="lazy" /></div>
@@ -188,8 +192,8 @@
     </section>
     <section class="testimonials">
       <div class="section-header">
-        <h2>Testimonials</h2>
-        <p>Results from Miami e‑commerce projects.</p>
+        <h2 data-en="Testimonials" data-es="Testimonios">Testimonials</h2>
+        <p data-en="Results from Miami e‑commerce projects." data-es="Resultados de proyectos de e‑commerce en Miami.">Results from Miami e‑commerce projects.</p>
       </div>
       <div class="features-grid">
         <div class="feature-item">
@@ -207,32 +211,32 @@
 
     <section class="services" id="related-services">
       <div class="section-header">
-        <h2>Related services</h2>
-        <p>Boost your store with complementary services.</p>
+        <h2 data-en="Related services" data-es="Servicios relacionados">Related services</h2>
+        <p data-en="Boost your store with complementary services." data-es="Potencia tu tienda con servicios complementarios.">Boost your store with complementary services.</p>
       </div>
       <div class="services-grid">
         <div class="service-card">
           <div class="service-image"><i class="fas fa-search"></i></div>
           <div class="service-content">
-            <h3>SEO Miami</h3>
-            <p>Collections and product SEO, structured data, and conversion tracking.</p>
-            <a class="service-btn" href="seo-miami.html">Learn More</a>
+              <h3 data-en="SEO Miami" data-es="SEO Miami">SEO Miami</h3>
+              <p data-en="Collections and product SEO, structured data, and conversion tracking." data-es="SEO de colecciones y productos, datos estructurados y tracking de conversiones.">Collections and product SEO, structured data, and conversion tracking.</p>
+              <a class="service-btn" href="seo-miami.html" data-en="Learn More" data-es="Saber Más">Learn More</a>
           </div>
         </div>
         <div class="service-card">
           <div class="service-image"><i class="fas fa-palette"></i></div>
           <div class="service-content">
-            <h3>UX/UI Design</h3>
-            <p>Better product discovery and checkout UX with research and prototyping.</p>
-            <a class="service-btn" href="ux-ui-design-miami.html">Learn More</a>
+              <h3 data-en="UX/UI Design" data-es="Diseño UX/UI">UX/UI Design</h3>
+              <p data-en="Better product discovery and checkout UX with research and prototyping." data-es="Mejor descubrimiento de productos y UX de checkout con investigación y prototipos.">Better product discovery and checkout UX with research and prototyping.</p>
+              <a class="service-btn" href="ux-ui-design-miami.html" data-en="Learn More" data-es="Saber Más">Learn More</a>
           </div>
         </div>
         <div class="service-card">
           <div class="service-image"><i class="fas fa-code"></i></div>
           <div class="service-content">
-            <h3>Web Design Miami</h3>
-            <p>Landing pages and content hubs that feed your store with qualified traffic.</p>
-            <a class="service-btn" href="web-design-miami.html">Learn More</a>
+              <h3 data-en="Web Design Miami" data-es="Diseño Web Miami">Web Design Miami</h3>
+              <p data-en="Landing pages and content hubs that feed your store with qualified traffic." data-es="Landing pages y hubs de contenido que alimentan tu tienda con tráfico calificado.">Landing pages and content hubs that feed your store with qualified traffic.</p>
+              <a class="service-btn" href="web-design-miami.html" data-en="Learn More" data-es="Saber Más">Learn More</a>
           </div>
         </div>
       </div>
@@ -240,11 +244,11 @@
 
     <section class="contact">
       <div class="section-header">
-        <h2>Ready to sell?</h2>
-        <p>Get a tailored e‑commerce plan in 24–48 hours.</p>
+        <h2 data-en="Ready to sell?" data-es="¿Listo para vender?">Ready to sell?</h2>
+        <p data-en="Get a tailored e‑commerce plan in 24–48 hours." data-es="Recibe un plan de e‑commerce a medida en 24–48 horas.">Get a tailored e‑commerce plan in 24–48 hours.</p>
       </div>
       <div class="whatsapp-cta">
-        <a href="https://wa.me/17869926153?text=Hello%20I%20want%20an%20ecommerce%20store%20in%20Miami" class="whatsapp-btn" target="_blank"><i class="fab fa-whatsapp"></i><span>Chat on WhatsApp</span></a>
+          <a href="https://wa.me/17869926153?text=Hello%20I%20want%20an%20ecommerce%20store%20in%20Miami" class="whatsapp-btn" target="_blank"><i class="fab fa-whatsapp"></i><span data-en="Chat on WhatsApp" data-es="Chatear en WhatsApp">Chat on WhatsApp</span></a>
       </div>
     </section>
   </main>
@@ -252,7 +256,7 @@
   <footer class="footer">
     <div class="container">
       <div class="footer-bottom">
-        <p>&copy; 2025 UX90 Creations. All rights reserved.</p>
+        <p>&copy; 2025 UX90 Creations. <span data-en="All rights reserved." data-es="Todos los derechos reservados.">All rights reserved.</span></p>
       </div>
     </div>
   </footer>
